--- a/hw6/wlin15_hw6.ipynb
+++ b/hw6/wlin15_hw6.ipynb
@@ -4,10 +4,11 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
+    "# Weifan Lin\n",
     "from operator import add"
    ]
   },
@@ -15,12 +16,59 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[8]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# method 1\n",
+    "rdd = sc.textFile('citibike.csv')\n",
+    "\n",
+    "def mapper1(records):\n",
+    "    for line in records:\n",
+    "        yield (int(line.split(',')[2])/60, 1)\n",
+    "\n",
+    "def mapper2(durationCounts):\n",
+    "    li = []\n",
+    "    for i in durationCounts:\n",
+    "        li.append(i)\n",
+    "    yield li\n",
+    "\n",
+    "def computeMedian(list1, list2):\n",
+    "    li = list1+list2\n",
+    "    totalCount = 0\n",
+    "    medianCount = 0\n",
+    "    for duration, count in li:\n",
+    "        totalCount += count\n",
+    "    for duration, count in li:\n",
+    "        medianCount += count\n",
+    "        if medianCount > totalCount/2:\n",
+    "            yield duration\n",
+    "            break\n",
+    "    \n",
+    "durationCount = rdd.mapPartitions(mapper1).reduceByKey(add).sortByKey()\n",
+    "median = list(durationCount.mapPartitions(mapper2).reduce(computeMedian))\n",
+    "median # median is 8"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
    },
    "outputs": [],
-   "source": [
-    "rdd = sc.textFile('citibike.csv')"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -30,41 +78,23 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "529\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[Row(_c0=8.0)]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "record = rdd.map(lambda line: line.split(','))\n",
-    "totalCount = len(record.collect())\n",
-    "tripDurations = record.map(lambda x: (int(x[2]), 1)).reduceByKey(add)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "529\n"
-     ]
-    }
-   ],
-   "source": [
-    "medianCount = 0\n",
-    "for duration, count in sorted(tripDurations.collect()):\n",
-    "    medianCount += count\n",
-    "    if medianCount>=totalCount/2:\n",
-    "        print duration\n",
-    "        break"
+    "# method 2\n",
+    "lines = sc.textFile('citibike.csv')\n",
+    "minutes = lines.map(lambda x: (int(x.split(',')[2])/60,))\n",
+    "df = sqlContext.createDataFrame(minutes, ('minutes', )).cache()\n",
+    "df.registerTempTable('records')\n",
+    "sqlContext.sql('select percentile(minutes, 0.5) from records').collect()"
    ]
   },
   {
